syntax = "proto3";

service ApplicationService {
    rpc GetSettings(GetSettingsReq) returns (GetSettingsResp);
    rpc GetAllSettings(GetAllSettingsReq) returns (GetAllSettingsResp);
}

message GetSettingsReq {
    string name = 1;
}

message GetSettingsResp {
    SettingsValue value = 1;
}


message GetAllSettingsReq { }

message GetAllSettingsResp {
    repeated SettingsValue values = 1;
}

message SettingsValue {
    string name = 1;
    string value = 2;
}