syntax = "proto3";

service ProjectService {
    rpc GetInfo(ProjectInfoReq) returns (ProjectInfoResp);

    rpc GetModel(GetModelReq) returns (stream GetModelResp);

    rpc ListObjects(ListObjectsReq) returns (ListObjectsRes);
    rpc GetObjects(GetObjectsReq) returns (stream GetObjectsResp);
}

message ProjectInfoReq { }

message ProjectInfoResp {
    string name = 1;
    string country_code = 2;
}


message GetModelReq { 
    ModelOptions options = 1;
}

message GetModelResp { 
    ModelPacket packet = 1;
}


message ListObjectsReq { }

message ListObjectsRes {
    repeated ModelObject objects = 1;
}


message GetObjectsReq {
    ModelOptions options = 1;
    repeated ModelObject objects = 2;
}

message GetObjectsResp {
    ModelPacket packet = 1;
}


enum ModelObjectType {
    CONNECTION_POINT = 0;
    SUBSTRUCTURE = 1;
}

message ModelObject {
    ModelObjectType type = 1;
    int32 id = 2;
}

message ModelPacket {
    bytes data = 1;
}

message ModelExportOptions {
    bool results = 1;
    bool generic_css_always = 2;
}